--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently npm:dev:client npm:dev:server",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
-    "format": "prettier --write *.{js,jsx} __tests__/**/*.{js,jsx}",
+    "format": "prettier --write **/*.{js,jsx,ts,tsx}",
     "format:check": "prettier --check *.{js,jsx} __tests__/**/*.{js,jsx}",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd server && npm start"
