--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "cd server && npm start",
     "dev": "concurrently npm:dev:client npm:dev:server",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
+    "build": "npm run build:server && npm run build:client",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
     "format": "prettier --write **/*.{js,jsx}",
     "format:check": "prettier --check *.{js,jsx}",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server && npm start"
   },
   "keywords": [],
   "author": "",
