--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:server": "cd server && npm run build",
     "format": "prettier --write **/*.{js,jsx}",
     "format:check": "prettier --check *.{js,jsx}",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
